--- a/source/dialogs/curve-attribute/curve-attribute-modal.html
+++ b/source/dialogs/curve-attribute/curve-attribute-modal.html
@@ -133,8 +133,8 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-4 normal-text" for="color">Border Color</label>
                                             <div class="col-sm-8 text-left">
-                                                <div class="addon valign-middle" ng-style="{'background-color':wiModal.symbolOptions.symbolStyle.symbolStrokeStyle}"><img/></div>
                                                 <button ng-click="wiModal.lineColor();" 
+                                                        ng-style="{'background-color':wiModal.symbolOptions.symbolStyle.symbolStrokeStyle}"
                                                         class="form-control wi-form-control width-80px">Change</button>
                                             </div>
                                         </div>
