--- a/source/dialogs/line-style/line-style-modal.html
+++ b/source/dialogs/line-style/line-style-modal.html
@@ -60,13 +60,8 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-4 normal-text" for="color">Line Color</label>
                                 <div class="col-sm-8 text-left">
-                                    <!-- <input kendo-color-picker k-palette="'websafe'"
-                                           class="form-control wi-form-control"
-                                           ng-model="wiModal.options.lineStyle.lineColor"/>
-                                    {{wiModal.options.lineStyle.lineColor}} -->
-                                    <div class="addon valign-middle" 
-                                        ng-style="{'background-color':wiModal.options.lineStyle.lineColor}"><img/></div>
                                     <button ng-click="wiModal.lineColor();"
+                                            ng-style="{'background-color':wiModal.options.lineStyle.lineColor}"
                                             class="form-control wi-form-control width-80px">Change</button>
                                 </div>
                             </div>
