--- a/source/dialogs/variable-shading/variable-shading-modal.html
+++ b/source/dialogs/variable-shading/variable-shading-modal.html
@@ -14,7 +14,8 @@
                         <div class="col-sm-2"></div>
                         <div class="col-sm-3">
                             <select class="form-control wi-form-control"
-                                    ng-model="wiModal.options.curveControl"></select>
+                                    ng-model="wiModal.options.idControlCurve"
+                                    ng-options="item.properties.idCurve as item.datasetCurve for item in wiModal.selectCurve"></select>
                         </div>
                     </div>
                     <div class="row">
@@ -36,12 +37,12 @@
                         <div class="col-sm-3">
                             <input type="number" name=""
                                 class="form-control wi-form-control"
-                                ng-model="wiModal.options.startX">
+                                ng-model="wiModal.options.gradient.startX">
                         </div>
                         <div class="col-sm-3">
                             <input type="number" name=""
                                 class="form-control wi-form-control"
-                                ng-model="wiModal.options.endX">
+                                ng-model="wiModal.options.gradient.endX">
                         </div>
                     </div>
                     <div class="row">
@@ -55,15 +56,13 @@
                             <p class="small-text margin-top-0_5em">Color:</p>
                         </div>
                         <div class="col-sm-3">
-                            <div class="addon valign-middle" 
-                                ng-style="{'background-color':wiModal.options.startColor}"><img/></div>
                                     <button ng-click="wiModal.startColor()"
+                                            ng-style="{'background-color':wiModal.options.gradient.startColor}"
                                             class="form-control wi-form-control width-80px">Change</button>
                         </div>
                         <div class="col-sm-3">
-                            <div class="addon valign-middle" 
-                                ng-style="{'background-color':wiModal.options.endColor}"><img/></div>
                                     <button ng-click="wiModal.endColor()"
+                                            ng-style="{'background-color':wiModal.options.gradient.endColor}"
                                             class="form-control wi-form-control width-80px">Change</button>
                         </div>
                     </div>
