--- a/source/dialogs/zone-track-properties/zone-track-properties-modal.html
+++ b/source/dialogs/zone-track-properties/zone-track-properties-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Depth Track Properties</h4>
+                <h4 class="modal-title">Zone Track Properties</h4>
             </div>
             <div class="modal-body padding-0">
                 <form action="" class="form-horizontal">
@@ -51,9 +51,8 @@
                                 <label class="control-label col-sm-5 normal-text" for="track-background">Track background</label>
                                 <div class="col-sm-7">
                                     <div class="float-left">
-                                        <!-- <input kendo-color-picker k-palette="'websafe'" class="form-control wi-form-control" ng-model="wiModal.trackColor" /> -->
-                                        <div class="addon valign-middle" ng-style="{'background-color':wiModal.trackColor}"><img/></div>
                                         <button ng-click="wiModal.trackBackground();"
+                                                ng-style="{'background-color':wiModal.trackColor}"
                                                 class="form-control wi-form-control width-80px">
                                                     Change
                                         </button>
