--- a/source/dialogs/color-picker/color-picker-modal.html
+++ b/source/dialogs/color-picker/color-picker-modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="myModal">
+<div class="modal fade" data-backdrop="static" data-keyboard="false">
   <div class="modal-dialog modal-700px">
     <div class="modal-content">
       <!-- Modal header -->
