--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -162,10 +162,8 @@
                                                 <div class="float-left">
                                                     <button ng-click="wiModal.colorTrack();"
                                                             ng-style="{'background-color':wiModal.props.general.color}"
-                                                            class="form-control wi-form-control width-80px">
-                                                            Change
+                                                            class="form-control wi-form-control width-80px thick-border">
                                                     </button>
-                                                    
                                                 </div>
                                             </div>
                                         </div>
@@ -260,11 +258,11 @@
                                 </div>
                                 <div class="width-5-percent float-left padding-left-5px">
                                     <button class="btn btn-default" ng-click="wiModal.removeRowCurve();">
-                                            <span class="delete-16x16"></span>
-                                        </button>
+                                        <span class="delete-16x16"></span>
+                                    </button>
                                     <button class="btn btn-default" ng-click="wiModal.addRow();">
-                                            <span class="ok-16x16"></span>
-                                        </button>
+                                        <span class="ok-16x16"></span>
+                                    </button>
                                 </div>
                             </form>
                         </div>
