fixed create shading bug

--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -297,7 +297,7 @@
                                                             class="form-control wi-form-control" 
                                                             ng-options="item.id as item.datasetCurve for item in wiModal.curvesOnDataset"
                                                             ng-change="wiModal.onChangeShading($index);
-                                                            wiModal.setShadingName(shading.idLeftLine, shading._index, false);"></select>
+                                                            wiModal.setShadingName(shading.idLeftLine, shading._index, false);" ng-disabled="!shading.idRightLine"></select>
                                                 </td>
                                                 <td class="border border-style1-right">
                                                     <input type="number" ng-model="shading.leftFixedValue" 
@@ -309,7 +309,9 @@
                                                     <select ng-model="shading.idRightLine" name="curveName"
                                                             class="form-control wi-form-control" 
                                                             ng-options="item.id as item.datasetCurve for item in wiModal.curvesOnDataset"
-                                                            ng-change="wiModal.onChangeShading($index);wiModal.setShadingName(shading.idRightLine, shading._index, true);"></select>
+                                                            ng-change="wiModal.onChangeShading($index);wiModal.setShadingName(shading.idRightLine, shading._index, true); wiModal.chooseRightCurve()">
+                                                                <option></option>
+                                                            </select>
                                                 </td>
                                                 <td class="border border-style1-right">
                                                     <input type="number" ng-model="shading.rightFixedValue" 
